# oastodcat

./: .flake8  .gitignore  Pipfile  README.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  setup.py
.github/: release-drafter.yml
.github/workflows/: constraints.txt  coverage.yml  release-drafter.yml  release.yml  run-ci.yml  test-pypi.yml  tests.yml
.pytype/: .ninja_log  build.ninja
.pytype/imports/: oas2dcat.__init__.imports  oastodcat.__init__.imports  tests.test_oas_dataservice.imports
.pytype/pyi/: conf.pyi  noxfile.pyi  test_oas_dataservice.pyi
.pytype/pyi/oas2dcat/: __init__.pyi  oas_dataservice.pyi
.pytype/pyi/oastodcat/: __init__.pyi  oas_dataservice.pyi
.pytype/pyi/tests/: test_oas_dataservice.pyi
docs/: conf.py  index.rst  reference.rst  requirements.txt
openapiparser/: openapi.py
src/oastodcat/: __init__.py  oas_dataservice.py
tests/: __init__.py  empty_spec.yaml  test_oas_dataservice.py  test_openapiparser.py
