[tool.poetry]
name = "oastodcat"
version = "2.0.0"
description= "A library for transforming an openAPI file to one or more dcat:DataService"
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Informasjonsforvaltning/oastodcat"
repository = "https://github.com/Informasjonsforvaltning/oastodcat"
documentation = "https://oastodcat.readthedocs.io"
classifiers=[
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: Apache Software License",
      "Operating System :: OS Independent",
      ]
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
pyyaml = "^5.3.1"
importlib_metadata = {version = "^1.5.0", python = "<3.8"}
datacatalogtordf = "^1.0.0"
rdflib = "^6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
safety = "^1.8.7"
pytype = {version = "^2020.2.20", python = "3.7"}
flake8-annotations = "^2.0.1"
flake8-docstrings = "^1.5.0"
darglint = "^1.2.0"
Pygments = "^2.6.1"
xdoctest = "^0.15.0"
codecov = "^2.0.16"
pytest-mock = "^3.3.1"
sphinx-autodoc-typehints = "^1.11.1"
black = "^21.7b0"
mypy = "^0.910"
Sphinx = "^4.1.2"
pep8-naming = "^0.12.1"
flake8-bugbear = "^21.4.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["oastodcat"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
