[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library for transforming an openAPI file to one or more dcat:DataService"
documentation = "https://oastodcat.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/oastodcat"
license = "Apache-2.0"
name = "oastodcat"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/oastodcat"
version = "2.0.1"

[tool.poetry.dependencies]
datacatalogtordf = "^2.1.2"
python = ">=3.8,<3.11"
pyyaml = "^5.3.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
Sphinx = "^5.0.1"
bandit = "^1.7.4"
black = "^22.6.0"
codecov = "^2.0.16"
coverage = "^6.4.3"
darglint = "^1.2.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.4.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.971"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"
pep8-naming = "^0.13.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.3.1"
pytype = "^2022.5.19"
safety = "^2.1.1"
sphinx-autodoc-typehints = "^1.11.1"
xdoctest = "^1.0.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["oastodcat"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
